@@ -32,8 +32,8 @@
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 .\" EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" Sccsid @(#)tar.1	1.45 (gritter) 1/29/05
-.TH TAR 1 "1/29/05" "Heirloom Toolchest" "User Commands"
+.\" Sccsid @(#)tar.1	1.46 (gritter) 3/1/05
+.TH TAR 1 "3/1/05" "Heirloom Toolchest" "User Commands"
 .SH NAME
 tar \- tape archiver
 .SH SYNOPSIS
@@ -325,7 +325,7 @@ format extended headers are created by
 under the following circumstances:
 A path name exceeds 255 bytes
 or does not contain a slash character at an appropriate position,
-and does not contain non-ASCII characters;
+and does not contain non-UTF-8 characters;
 the name of a linked file exceeds 100 bytes;
 a file is larger than 8\ GB;
 a user or group ID exceeds the number 2097151.
